frontend/src/_styles/theme.scss
/* ... */
.confirm-dialogue-modal {
  background: var(--base);
}

.theme-dark {
  .icon-widget-popover {
    .search-box-wrapper input {
      color: #f4f6fa !important;
    }

    .search-box-wrapper input:focus {
      background-color: #1c252f !important;
    }
  }

  .shareable-link {
    .tj-app-input textarea {
      background-color: #5e656e !important;
      color: #f4f6fa !important;
      border: none !important;
    }
  }

  .icon-widget-popover {
    .search-box-wrapper .input-icon-addon {
      min-width: 2.5rem !important;
    }

    .search-box-wrapper input {
      color: var(--base) !important;
    }
  }
}

